# bandos

./: .gitignore  brand-image-agent-adk-spec.md  brand-image-agent-spec.md
brand-image-agent/: brand_agent.db  main.py  pyproject.toml
brand-image-agent/agents/.adk/artifacts/users/user/sessions/fd9ed573-90bd-4926-92cc-89c3c1d59c1a/artifacts/55a4a31f061643ed80927b0d03b38c65.png/versions/0/: metadata.json
brand-image-agent/agents/brand_image_agent/: __init__.py  agent.py
brand-image-agent/agents/brand_image_agent/.adk/: session.db
brand-image-agent/agents/brand_image_agent/sub_agents/: image_generator.py  judge_agent.py  prompt_engineer.py
brand-image-agent/agents/brand_image_agent/tools/: brand_db.py  generate_image.py  generate_with_reference.py
brand-image-agent/database/: models.py  seed.py  session.py
